Fix z-index of #cloud-container

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -565,6 +565,7 @@ p code {
     height: 100dvh;
     position: fixed;
     top: 0rem;
+    z-index: -99;
     /* border-radius: 50%; */
     background: transparent;
     /* box-shadow:
